[package]
name = "atomichron"
version = "0.1.0"
edition = "2021"
description = "A CLI time tracking utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
uuid = { version = "1.2.1", features = ["v4", "std"]}
serde = "1.0.147"
ron = "0.8.0"
log = "0.4.17"
fern = "0.6.1"
